search Customer by name

--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -5,7 +5,9 @@
 <a class="btn btn-primary" style="float: right" href="/add/">Add a Customer</a></p>
 
 <h1>Customers</h1>
-
+{% if customers.length === 0 %}
+  <p>No Customer Found</p>
+{% endif %}
 <ul style="column-count: 4">
   {% for customer in customers %}
   <li><a href="/{{ customer.id }}/">{{ customer.fullName }}</a></li>
