top ten customers and getter setter"

--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -5,6 +5,7 @@
 <a class="btn btn-primary" style="float: right" href="/add/">Add a Customer</a></p>
 
 <h1>Customers</h1>
+<a href="/getTopTen/" class="btn btn-info mb-4">Get Top 10</a>
 {% if customers.length === 0 %}
   <p>No Customer Found</p>
 {% endif %}
